--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
     </nav>
   </div>
 
-  <script type="module" src="./src/app.js"></script>
+  <script type="module" src="./app.js"></script>
 </body>
 </html>
